[gd_scene load_steps=22 format=3 uid="uid://bqaeh5ghxl7u4"]

[ext_resource type="Script" path="res://main.gd" id="1_2hbh1"]
[ext_resource type="PackedScene" uid="uid://cjssh347c6vi0" path="res://ship.tscn" id="1_nlrbh"]
[ext_resource type="PackedScene" uid="uid://brfmn5v6oodtc" path="res://spawner.tscn" id="2_7cb80"]
[ext_resource type="Texture2D" uid="uid://bv7460cadxhmb" path="res://images/sky.jpg" id="4_kyjr6"]
[ext_resource type="Texture2D" uid="uid://drtyb7vnpb4ms" path="res://images/astronautA_S.png" id="5_7551r"]
[ext_resource type="Texture2D" uid="uid://dkbhrxj0468oj" path="res://images/bullet.png" id="6_fbp6v"]
[ext_resource type="AudioStream" uid="uid://bf0xg05hmj6ou" path="res://sound/background.mp3" id="7_lckg3"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_w6tb6"]
plane = Plane(-1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_yia86"]
plane = Plane(1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_qryf6"]
plane = Plane(0, -1, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_3rnr3"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_vu20l"]
panorama = ExtResource("4_kyjr6")

[sub_resource type="Sky" id="Sky_e3ymj"]
sky_material = SubResource("PanoramaSkyMaterial_vu20l")

[sub_resource type="Environment" id="Environment_efitl"]
background_mode = 2
background_energy_multiplier = 0.3
sky = SubResource("Sky_e3ymj")
sky_rotation = Vector3(-0.174533, 0, 0)

[sub_resource type="Theme" id="Theme_eura4"]
default_font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_s341u"]
font_size = 125

[sub_resource type="LabelSettings" id="LabelSettings_l0cnm"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_1dw3j"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_l0d6t"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_50we7"]
font_size = 20

[sub_resource type="Theme" id="Theme_7tksc"]
default_font_size = 40

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_2hbh1")
ship_scene = ExtResource("1_nlrbh")
spawner_scene = ExtResource("2_7cb80")

[node name="Walls" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="Right" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
shape = SubResource("WorldBoundaryShape3D_w6tb6")

[node name="Left" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
shape = SubResource("WorldBoundaryShape3D_yia86")

[node name="Top" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("WorldBoundaryShape3D_qryf6")

[node name="Bottom" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
shape = SubResource("WorldBoundaryShape3D_3rnr3")

[node name="Ship" parent="." instance=ExtResource("1_nlrbh")]

[node name="Spawner" parent="." instance=ExtResource("2_7cb80")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.808822, 0.588054, 0, -0.588054, 0.808822, 0, 8.10478, 14.0888)
light_energy = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_efitl")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_eura4")

[node name="Retry" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -116.0
offset_right = 357.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_s341u")

[node name="Button" type="Button" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = 79.0
offset_right = 214.5
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Press space or click here to restart"

[node name="Score" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = 31.5
offset_right = 62.5
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
text = "Your score"
label_settings = SubResource("LabelSettings_l0cnm")

[node name="HUD" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 304.0
offset_bottom = 136.0

[node name="Score" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HUD/Score"]
layout_mode = 2
text = "Score: "

[node name="Score" type="Label" parent="UI/HUD/Score"]
layout_mode = 2
text = "0"

[node name="Astronauts" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Astronauts"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_7551r")
expand_mode = 3

[node name="Label" type="Label" parent="UI/HUD/Astronauts"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"

[node name="Ammo" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/HUD/Ammo"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_fbp6v")
expand_mode = 3

[node name="Label" type="Label" parent="UI/HUD/Ammo"]
layout_mode = 2
size_flags_horizontal = 0
text = "0"

[node name="Start" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Start"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 96.0
offset_right = 100.0
offset_bottom = 134.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Welcome to the "
label_settings = SubResource("LabelSettings_1dw3j")

[node name="Label2" type="Label" parent="UI/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -188.0
offset_right = 379.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME ABOUT
FLYING SPACESHIP"
label_settings = SubResource("LabelSettings_l0d6t")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="UI/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = 52.0
offset_right = 349.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
text = "Fly through the asteroid field, rescue astronauts into green cargo ships,
 collect ammo, destroy asteroids and alien spacecrafts, and don't get hit"
label_settings = SubResource("LabelSettings_50we7")

[node name="Button" type="Button" parent="UI/Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -184.0
offset_right = 54.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_7tksc")
text = "Start"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lckg3")
volume_db = -6.0
autoplay = true

[connection signal="hit" from="Ship" to="." method="_on_ship_hit"]
[connection signal="pressed" from="UI/Retry/Button" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/Start/Button" to="." method="_on_start_pressed"]
